# rsclashapi

./: .gitignore  Cargo.toml  LICENSE  README.md  scripts
examples/: dev_pure_http.rs  dotenv.rs  format_tag.rs  ip_addr.rs
scripts/: expose_enums.sh  expose_models.sh
src/: api.rs  error.rs  lib.rs
src/auth/: credentials.rs  dev.rs  keys.rs  mod.rs
src/models/: badge_urls.rs  clan.rs  clan_capital.rs  cwl.rs  error.rs  gold_pass.rs  icon_urls.rs  labels.rs  language.rs  league.rs  location.rs  mod.rs  paging.rs  player.rs  ranking.rs  status.rs  war.rs  war_log.rs
src/models/enums/: clan.rs  mod.rs  player.rs
src/utils/: mod.rs
tests/: parse_edge_cases.rs  parse_responses.rs  test_utils.rs
