[package]
name = "rsclashapi"
version = "0.1.0"
edition = "2021"
description = "A wrapper around the Clash of Clans API written in rust"
readme = "README.md"
homepage = "https://github.com/ickoxii/rsclashapi#README"
repository = "https://github.com/ickoxii/rsclashapi"
license = "MIT"

[dependencies]
# Util
lazy_static = "~1.5.0"

# Networking
actix-web = "~4.9.0"
reqwest = { version = "~0.11.20", features = [
	  "json",
	  "cookie_store",
	  "cookies", ] }
tokio = { version = "~1", features = ["full"] }
url = "~2.5.4"

# Encoding/Decoding
urlencoding = "~2.1.3"

# Json serialize/deserialize
serde = { version = "~1.0.188", features = ["derive"] }
serde_json = "~1.0.105"
serde_urlencoded = "~0.7.1"
serde_repr = "~0.1.16"

# JWT Handling
jsonwebtoken = "~9"
base64 = "~0.22.1"

# Error Handling
anyhow = "~1.0.95"
thiserror = "~2.0.10"

[dev-dependencies]
dotenv = "~0.15.0"
dotenv_codegen = "~0.15.0" # For dotenv macro
wiremock = "~0.6.2" # For simulating API responses
